--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h3 class="place__url-heading">URL</h3>
                     <a href='http://park-kosa.ru' class="place__link">park-kosa.ru</a>
                 </div>
-                <img class="place__image" src="images/place-kosa.jpg" alt="Тут была картинка"></img>
+                <img class="place__image" src="images/place-kosa.jpg" alt="Тут была картинка">
                 <div class="place__text">
                     <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
                         горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
@@ -124,7 +124,7 @@
                     <a href='https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy'
                         class="place__link">National Geographic</a>
                 </div>
-                <img class="place__image" src="images/place-kolsky.jpg" alt="Тут была картинка"></img>
+                <img class="place__image" src="images/place-kolsky.jpg" alt="Тут была картинка">
                 <div class="place__text">
                     <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра,
                         от&nbsp;которой на юг — тайга, а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым
@@ -145,7 +145,7 @@
                     <a href='https://www.facebook.com/vera.bashmakova/posts/10156011613718822'
                         class="place__link">Facebook</a>
                 </div>
-                <img class="place__image" src="images/place-altai.jpg" alt="Тут была картинка"></img>
+                <img class="place__image" src="images/place-altai.jpg" alt="Тут была картинка">
                 <div class="place__text">
                     <p class="place__paragraph">Алтай — одно из красивейших мест в&nbsp;России. В первую очередь
                         из-за
@@ -167,7 +167,7 @@
                     <h3 class="place__url-heading">URL</h3>
                     <a href='https://vk.com/baikalmile' class="place__link">https://vk.com/baikalmile</a>
                 </div>
-                <img class="place__image" src="images/place-winter-baikal.jpg" alt="Тут была картинка"></img>
+                <img class="place__image" src="images/place-winter-baikal.jpg" alt="Тут была картинка">
                 <div class="place__text">
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также
                         знают, что это самый большой источник пресной воды и&nbsp;одно из красивейших мест
@@ -187,7 +187,7 @@
                     <h3 class="place__url-heading">URL</h3>
                     <a href='http://vodlozero.ru' class="place__link">http://vodlozero.ru/</a>
                 </div>
-                <img class="place__image" src="images/place-karelia.jpg" alt="Тут была картинка"></img>
+                <img class="place__image" src="images/place-karelia.jpg" alt="Тут была картинка">
                 <div class="place__text">
                     <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии:
                         образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она
