--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </li>
             </ul>
         </nav>
-        <p class="footer__copyright">&copy 2020. Михаил Горбунов</p>
+        <p class="footer__copyright">&copy; 2020. Михаил Горбунов</p>
     </footer>
 
 </body>
